--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                                 </div>
                                 <div class="modal-body">
                                         <ul>
-                                                <li>By Daniel Thomas</li>
+                                                <li>By Justine Carl Villanueva</li>
                                                 <li>Best experienced on a VR headset</li>
                                         </ul>
                                 </div>
